# ai-assistant

./: .gitignore  AGENTS.md  compose.yml
.github/workflows/: fe.yml  opencode.yml  pr-review.yml
backend/: chat.py  main.py  pyproject.toml  search.py  store.py
frontend/: Dockerfile
frontend/src/: App.tsx
